<resources>
    <string name="app_name">Achieve</string>
    <string name="tab_text_1">My Goals</string>
    <string name="tab_text_2">Inspiration</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_add_goal">Add Your Goal</string>
    <string name="priority_label">Priority</string>
    <string name="description_label">Enter Your Goal</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="add_your_goal_button">Add Your Goal</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="app_logo">app logo</string>
    <string name="priority_level">Priority Level :</string>
    <string name="textview_inspiration">Daily Inspirational Quotes </string>
    <string name="title_activity_goal_detail">Goal Details</string>
    <string name="textview_detail_description" />
    <string name="logo">logo</string>
    <string name="start_date">Start Date :</string>
    <string name="end_date">End Date :</string>
    <string name="your_goals">Your Goals</string>
    <string name="quote_of_the_day">Quote of The Day</string>
    <string name="author">Author</string>
    <string name="start_date_full"> %1$s  %2$s  %3$s %4$s</string>
    <string name="end_date_full">%1$s  %2$s  %3$s </string>
    <string name="days_left">%1$d Days</string>
</resources>
